--- a/README.rdoc
+++ b/README.rdoc
@@ -9,6 +9,6 @@ These are the changes so far:
 
 1. Add <code>gem "RedCloth", :git => "https://github.com/groe/redcloth"</code> to the Gemfile.
 
-2. Compile it: <code>cd `bundle show RedCloth` && rake install</code>
+2. Compile it: <code>cd `bundle show RedCloth` && rake compile && rake install</code>
 
 You'll need the latest "Ragel":http://www.cs.queensu.ca/~thurston/ragel/.
